# gric-cluster

./: .clang-format  .gitignore  404.html  CMakeLists.txt  README.md  discarded_frames.txt  index.html  mkdocs.yml  setup.cfg  sitemap.xml  test_gprob.clustered.txt  test_hdr.clustered.txt  test_hdr.txt  test_perf.clustered.txt  test_perf.txt  test_strat.clustered.txt  test_strat.txt
.agents/rules/: architecture-principles.md  code-style-guide.md  common-agent-mistakes.md  compile-after-edit.md  concurrency-practices.md  const-correctness.md  defensive-programming-practices.md  error-handling-practices.md  git-workflow.md  help-message-standard.md  library-vs-application-error-handling.md  naming-conventions.md  parameter-alignment.md  performance-practices.md  readme-update.md  shared-memory-safety.md  testing-practices.md
.agents/skills/advanced-math-patterns/: SKILL.md
.agents/skills/diagnose-build-failure/: SKILL.md
.agents/skills/feature-planner/: SKILL.md
.agents/skills/feature-planner/templates/: feature-plan-template.md
.agents/skills/imagestream-internals/: SKILL.md
.agents/skills/optimize-compute-function/: SKILL.md
.agents/skills/pr-preparation/: SKILL.md
.agents/skills/refactor-c-source/: SKILL.md
.agents/workflows/: add-function.md  audit-code-quality.md  check-type-consistency.md  compile-test.md  fix-bug.md  inspect-machine-code.md  review-pr.md  setup-dev-environment.md  sync-worktree.md
.github/workflows/: benchmark.yml  deploy-docs.yml  sync-wiki.yml
algorithm/: index.html
algorithm/prediction/: index.html
algorithm/pruning/: index.html
benchmarks/: .RESULTS.md.swp  RESULTS.md  ascii-spot-2-video  default_tests.txt  gric.benchmark.default.conf  image-cluster  image-cluster-mktxtseq  image-cluster-plot  index.html  run_benchmark_locate.py  run_birch_stream_pipe.py  run_video_only.bash  runbenchmark
docs/: algorithm.md  benchmarks.md  index.md  practical-use.md
docs/algorithm/: index.md  prediction.md  pruning.md
gric/: TUTORIAL.md  image_cluster.py  user_example.py
out_discard/: anchors.txt  cluster_0.txt  cluster_1.txt  cluster_2.txt  cluster_3.txt  cluster_4.txt  cluster_5.txt  cluster_6.txt  cluster_7.txt  cluster_8.txt  cluster_9.txt  cluster_counts.txt  dcc.txt  frame_membership.txt  transition_matrix.txt
out_merge/: anchors.txt  cluster_0.txt  cluster_1.txt  cluster_2.txt  cluster_3.txt  cluster_4.txt  cluster_5.txt  cluster_6.txt  cluster_7.txt  cluster_8.txt  cluster_counts.txt  dcc.txt  frame_membership.txt  transition_matrix.txt
practical-use/: index.html
python/: image_cluster.py  test_wrapper.py
search/: search_index.json
src/: ascii-spot-2-video.c  cluster.c  cluster_core.c  cluster_core.h  cluster_defs.h  cluster_io.c  cluster_io.h  cluster_math.c  cluster_math.h  cluster_mgmt.c  cluster_mgmt.h  cluster_prune.c  cluster_prune.h  config_utils.c  framedistance.c  framedistance.h  frameread.c  frameread.h  gric-benchmark.c  gric-help.c  gric-info.c  gric-locate-plot.c  gric-locate.c  main.c  mkclusteredfile.c  mktestseq.c  model_nd.c  plot_clusters.c  png_io.c  png_io.h  stream_to_pipe.c  txt2mp4.c
src/gric-NDmodel/: model_nd.c
src/gric-ascii-spot-2-video/: ascii-spot-2-video.c
src/gric-benchmark/: benchmark.h  benchmark_utils.c  gric-benchmark.c  test_list.c
src/gric-cluster/: cluster_core.c  cluster_core.h  cluster_defs.h  cluster_help.c  cluster_help.h  cluster_io.h  cluster_math.c  cluster_math.h  cluster_mgmt.c  cluster_prune.c  cluster_scandist.c  cluster_step.c  cluster_step_helpers.c  cluster_step_helpers.h  common.h  config_utils.c  framedistance.c  main.c  png_io.c
src/gric-cluster-analysis/: gric-cluster-analysis.c
src/gric-cluster/core/: cluster_bounds.c  cluster_bounds.h  cluster_core.c  cluster_core.h  cluster_core_multitile.c  cluster_core_multitile.h  cluster_defs.h  cluster_mgmt.c  cluster_mgmt.h  cluster_shm.c  cluster_shm.h  cluster_step.c  cluster_step.h  config_utils.c  config_utils.h  main.c  tile_map.c  tile_map.h  tile_state.c  tile_state.h
src/gric-cluster/help/: cluster_help.c  cluster_help_content.c  cluster_help_content.h  cluster_help_format.c  cluster_help_format.h
src/gric-cluster/io/: cluster_io.c  cluster_io.h  cluster_io_log.c  cluster_io_multitile.c  cluster_io_multitile.h  cluster_io_results.c  frame_scatter.c  frame_scatter.h  frameread.c  frameread.h  frameread_ascii.c  frameread_ffmpeg.c  frameread_fits.c  frameread_internal.h  frameread_stream.c  png_io.c  png_io.h
src/gric-cluster/math/: cluster_math.c  cluster_math.h  cluster_prune.c  cluster_scandist.h  framedistance.c  framedistance.h  tuple_retrieval.c  tuple_retrieval.h
src/gric-cluster/steps/: cluster_steps.h  compute_priors_and_mixing.c  handle_new_cluster_creation.c  initialize_initial_cluster.c  measure_distance_to_cluster.c  record_step_assignment.c  select_next_measurement_target.c  update_consistency_mask.c  update_geometric_probabilities.c  update_probabilities_and_pruning.c
src/gric-help/: gric-help.c
src/gric-info/: gric-info.c
src/gric-mkclusteredfile/: mkclusteredfile.c
src/gric-mktxtseq/: mktestseq.c
src/gric-plot/: plot_clusters.c  plot_internal.h  plot_log_parser.c  plot_render.c
src/gric-plot/canvas/: canvas.c  canvas.h
src/gric-status/: gric-status.c  status_internal.h  status_shm.c  status_terminal.c  status_tui.c
src/gric-stream-to-pipe/: stream_to_pipe.c
src/gric-tune/: gric-tune.c
src/shared/: cli_colors.c  cli_colors.h
src/txt2mp4/: txt2mp4.c
test_hdr.txt.clusterdat/: anchors.txt  cluster_0.txt  cluster_1.txt  cluster_10.txt  cluster_2.txt  cluster_3.txt  cluster_4.txt  cluster_5.txt  cluster_6.txt  cluster_7.txt  cluster_8.txt  cluster_9.txt  cluster_counts.txt  dcc.txt  frame_membership.txt
tools/: gen_bouncing_balls.c
wiki/: Algorithm-Details.md
